--- a/documentation.html
+++ b/documentation.html
@@ -180,7 +180,6 @@
                         The platform gives the possibility to query and download your own datasets through the selection of indicators, filters, and visualization models.
                         A list of all indicators is provided and organized by the thematic sector.
                         The datasets obtained by download are free to reuse.</p>
-
                     <h5 style="color: #20c997;">FAO:</h5>
                       <p>FAO makes a significant contribution to global discussion related to food and agricultural statistics through its participation in international and regional statistical fora.
                         Their statistics data tackle issues related to food and agriculture, but also hunger, malnutrition and rural poverty. The Organization adopts Corporate Statistical Standards that set out the principles and recommended best practices to ensure that FAO statistical production processes and statistical outputs are of the highest possible quality.
@@ -196,6 +195,113 @@
                       UN IGME’s independent Technical Advisory Group (TAG), comprised of leading academic scholars and independent experts in demography and biostatistics, provides guidance on estimation methods, technical issues, and strategies for data analysis and data quality assessment.
                       UN IGME updates its child mortality estimates annually after reviewing newly available data and assessing data quality. The web portal contains the latest UN IGME estimates of child mortality at the country, regional and global levels, and the data used to derive them.</p>
 
+                  <h4>Legal analysis</h4>
+
+                  <h5 style="color: #20c997;">World Bank Group:</h5>
+                  <p>The license used is Creative Commons Attribution 4.0 International License (CC BY 4.0). The site includes a “Legal” section that provides all the legal regulations and privacy information.
+                    The Bank maintains appropriate technical and organizational safeguards against unauthorized processing of personal data and against accidental loss, destruction, or damage.</p>
+
+                  <h5 style="color: #20c997;">IHME:</h5>
+                  <p>Data made available for download on IHME website can be used, shared, modified, or built upon by non-commercial users in accordance with the IHME FREE-OF-CHARGE NON-COMMERCIAL USER AGREEMENT.
+                    Hereby users are granted of a free-of-charge, non-exclusive, royalty-free license to download the IHME Data and the Data Sets to create analyses using the IHME Data and Data Sets whether alone or in combination with other data (“Results”),
+                    for non-commercial purposes only, and to use such Results for internal research purposes and for publication in articles, posters, dissertations, briefs, reports, websites, or similar types.</p>
+
+                  <h5 style="color: #20c997;">World Health Organization:</h5>
+                  <p>Data published by WHO are distributed under Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Intergovernmental Organization (CC BY-NC-SA 3.0 IGO) license.
+                    The  CC BY-NC-SA 3.0 IGO license allows users to freely copy, reproduce, reprint, distribute, translate and adapt the work for non-commercial purposes.
+                    Some other material including reproduction and translation of figures, tables, maps, photos;
+                    reprint and translation of complete works and licensing of materials or other technical information in electronic database products and services can be used through request.</p>
+
+                  <h5 style="color: #20c997;">UNICEF</h5>
+                  <p> the content on the site is licensed under a Creative Commons Attribution-NonCommercial 3.0 IGO license, that allows users to freely copy, reproduce, reprint, distribute, translate, and adapt the work for non-commercial purposes.</p>
+
+                  <h5 style="color: #20c997;">FAO:</h5>
+                  <p>The website provides datasets and databases from different platforms. Specific statistical databases are covered by the Open Data Licensing Policy, and governed by the Statistical Databases Terms of Use.
+                    All other content on the website (expect where otherwise indicated) can be copied, printed, downloaded for private study, research, and teaching purposes, and for use in non-commercial products or services.
+                    The organization provides the email address copyright@fao.org  to submit the request for translation and adaptation rights and for resale and other commercial use rights, and to ask about licenses of the content on the website. However, the license used is not explicitly mentioned.</p>
+
+                  <h5 style="color: #20c997;">Our World in Data:</h5>
+                  <p> All the visualizations and texts present on the website are licensed under CC BY 4.0, all the materials can be transformed and adapted for any purpose.
+                    All data are available to download. Furthermore, all the code is open-sourced under the MIT license and can be found on GitHub here: https://github.com/owid.</p>
+
+                  <h5 style="color: #20c997;">UN IGME:</h5>
+                  <p>The license used is not explicitly mentioned. The website provides a “legal” page to check the legal aspects, but it leads to a page error.
+                    However when selecting and analyzing the dataset, the user can download it in different formats.</p>
+
+                  <h4>Ethical analysis</h4>
+
+                  <h5 style="color: #20c997;">World Bank Group:</h5>
+                  <p>One of the priorities that guide the World Bank Group is to work with countries to end poverty and boost prosperity for the poorest people, helping create sustainable economic growth and generate greater equity.
+                    Data are human-centered, equality and transparency are guaranteed.</p>
+
+                  <h5 style="color: #20c997;">IHME:</h5>
+                  <p>Ethical behavior is the core of IHME, they commit to working to produce evidence of discrimination and injustices and other critical public health issues that demand an urgent response. They also claim to undertake research to fight inequity, address racial disparities and they aim at making their organization more diverse and inclusive.</p>
+
+                  <h5 style="color: #20c997;">World Health Organization:</h5>
+                  <p>The WHO Office of Compliance, Risk Management and Ethics (CRE) promotes transparency and management of corporate-level risk, within the framework of WHO’s ethical principles.
+                    To this end, CRE promotes the practice of the ethical principles derived from the international civil service standards of conduct for all WHO staff and associated personnel.
+                    Great stress is given to contractors and collaborators to not perpetuate sexual exploitation and abuse of any kind.
+CRE provides clear and action-oriented advice in a secure and confidential environment where individuals can freely consult on ethical issues.
+</p>
+
+                  <h5 style="color: #20c997;">UNICEF</h5>
+                  <p>The dataset is in accordance with the highest standards of integrity, including honesty, truthfulness, and fairness.
+                    UNICEF aims to strengthen countries’ capacities to make informed decisions and lead initiatives based on the best available data.
+                    Key to this role is supporting countries’ collection of data on children and women and the Sustainable Development Goals through UNICEF’s global household survey program, the Multiple Indicator Cluster Surveys (MICS).
+                    They give great importance to ethics: “We believe that smart demand, supply and use of data drives better results for children.
+                    When the right data are in the right hands at the right time, decisions can be better informed, more equitable, and more likely to protect children’s rights.”.</p>
+
+                  <h5 style="color: #20c997;">FAO:</h5>
+                  <p>The Food and Agriculture Organization (FAO) is a specialized agency of the United Nations that leads international efforts to defeat hunger and poverty, ethical values are at the core of the FAO’s statistical work.
+                    Fao is dedicated to collecting, analyzing, interpreting and disseminating food and agriculture statistics that are relevant for decision-making.
+                    Their aim is to develop and implement methodologies and standards to assist countries and to help them in better planning their investments.
+                    Moreover all FAO employees who have access to or are associated with the processing of personal data are obliged to respect the confidentiality of official business matters, including personal data.. </p>
+
+                  <h5 style="color: #20c997;">Our World in Data:</h5>
+                  <p>The goal of the project, as stated by the creators is “to make the knowledge on the big problems accessible and understandable”.
+                    For this reason,  they want to provide full accessibility to important knowledge, focusing on the main problems the world is facing.
+                    They believe that a better use of the research work we have is possible, by exploiting the digital medium they want to share knowledge to help solving major problems.</p>
+
+                  <h5 style="color: #20c997;">UN IGME:</h5>
+                  <p>The UN IGME is led by the United Nations Children’s Fund (UNICEF) and includes the World Health Organization (WHO), the World Bank Group and the United Nations Population Division of the Department of Economic and Social Affairs as full members.
+                    So the organization share the same aim of UNICEF in supporting countries and to strengthen their capacities to make informed decisions.</p>
+
+                  <h4>Technical analysis</h4>
+                  <p>To see the entire explanatory table about technical analysis of datasets click here.</p>
+
+                  <h4>Mashup and output datasets</h4>
+                  <p>In order to manage the mash-up of different datasets we followed the Guidelines on FAIR Data Management in Horizon 2020.
+                    In accordance with these guidelines, we pursued the objective to make our research data findable, accessible, interoperable and re-usable (FAIR).</p>
+                  <h5 style="color: #20c997;">Findable:</h5>
+                  <p> the first step in (re)using data is to find them. Metadata and data should be easy to find for both humans and computers. Machine-readable metadata are essential for automatic discovery of datasets and services, so this is an essential component of the FAIRification process.</p>
+                  <p>F1. (Meta)data are assigned a unique identifier: both the data we retrieved in the original datasets, the mashed up data and the metadata we created according to the DCAT-AP are compliant with this point, presenting URI.</p>
+
+                  <p>F2. Data are described with rich metadata: we associated a rich amount of metadata compliant with the DCAT-AP specification, including not only all the mandatory classes with their respective mandatory properties but also some recommended and optional properties that were useful for our data.</p>
+
+                  <p>F3. Metadata clearly and explicitly include the identifier of the data they describe: for each dataset that is part of a catalogue and for our own dataset we associated to the metadata a unique identifier of the data described by means of the DCAT-AP optional property for datasets dct:identifier.</p>
+
+                  <h5 style="color: #20c997;">Accessible:</h5>
+                  <p>once the user finds the required data, she/he needs to know how can they be accessed.</p>
+                  <p>A1. (Meta)data are retrievable by their identifier using a standardised communications protocol: all the data we collected and mashed up and the relative metadata are retrievable through the HTTP or its extension HTTPS. Moreover, we provided also an explicit and clear contact protocol in the metadata by means of the names and emails of the data and metadata providers.</p>
+
+                  <h5 style="color: #20c997;">Interoperable:</h5>
+                  <p>the data usually need to be integrated with other data. In addition, the data need to interoperate with applications or workflows for analysis, storage, and processing.</p>
+                  <p>I1. (Meta)data use a formal, accessible, shared, and broadly applicable language for knowledge representation: we used JSON for the representation of the mashed up data and RDF with the XML syntax to describe and structure the metadata.</p>
+                  <p>I2. (Meta)data use vocabularies that follow FAIR principles: the annotation format we used allow to use machine-readable terms from any controlled vocabulary. We used the ISO standard vocabulary to represent nations, the Linked Open Data vocabulary specification called DCAT-AP. These vocabularies are documented and resolvable using globally unique and persistent identifiers.</p>
+                  <p>I3. (Meta)data include qualified references to other (meta)data: JSON and the RDF schema account for the data exchange and cross reference among metadata respectively.</p>
+
+                  <h5 style="color: #20c997;">Reusable:</h5>
+                  <p>the ultimate goal of FAIR is to optimise the reuse of data. To achieve this, metadata and data should be well-described so that they can be replicated and/or combined in different settings.</p>
+                  <p>R1. Meta(data) are richly described with a plurality of accurate and relevant attributes: our data and metadata are described through a rich and vary series of labels including the date of collection and modification of the data, the licence, the publisher, the creator, their content.</p>
+                  <p>R1.1. (Meta)data are released with a clear and accessible data usage license: all data we used were released with the specification of the usage license except for those from the UNHCR and UCDP. License in specified for the dataset and respective metadata we created (Creative Common License CC BY 4.0).</p>
+                  <p>R1.2. (Meta)data are associated with detailed provenance: our project includes information about the provenance of data in a machine-readable format in the metadata codification. The website presents also a description of the workflow that led to your data.</p>
+                  <p>R1.3. (Meta)data meet domain-relevant community standards: we used the ISO standard for geographic information.</p>
+                  <p>The principles mentioned above include three types of entities: data, metadata and infrastructure. Given the analysis, we can state that our research data are almost 100% compliant with the FAIR principles, with the few exceptions due to the lack of license specification.</p>
+
+                  <h4>Sustainability</h4>
+                  <p>The NutriData (SE abbiamo il dataset unico finale) dataset contains datasets that derive from different sources, concerning all the factors involved in the topic about children malnutrition: food supply adequacy, mortality, diseases and other physical pathologies, wealthiness of countries.
+                    The project has been created for the final examination for the Open Access and Digital Ethics course of the Master Degree in Digital Humanities and Digital Knowledge at the University of Bologna: the dataset is not actively maintained, while the datasets used for this project are currently maintained by the relative institutions or organisations. 
+                    NutriData is distributed under Creative Commons Attribution 4.0 International License (CC BY-SA 4.0)</p>
             </div>
           </div>
         </div>
