--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="img-box b2">
               <img src="images/a-2.jpg" alt="" />
             </div>
-            
+
           </div>
         </div>
         <div class="col-md-6">
@@ -335,7 +335,9 @@ nd course section -->
               Amanda Culoma
             </h4>
             <h6 style="text-align: center;">
-              <p style="margin: 1%;">descrizioncina</p>
+              <p style="margin: 1%;">Amanda Culoma was born and raised Pantelleria, graduated in Classical Studies at the University of Bologna.
+                She Is now attending the Master Degree in Digital Humanities and Digital Knowledge at the same university. 
+                Her main interests are digital epigraphy and the creation of digital resources for classical studies in general.</p>
             </h6>
           </div>
         </div>
