--- a/documentation.html
+++ b/documentation.html
@@ -299,9 +299,28 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
                   <p>The principles mentioned above include three types of entities: data, metadata and infrastructure. Given the analysis, we can state that our research data are almost 100% compliant with the FAIR principles, with the few exceptions due to the lack of license specification.</p>
 
                   <h4>Sustainability</h4>
-                  <p>The NutriData (SE abbiamo il dataset unico finale) dataset contains datasets that derive from different sources, concerning all the factors involved in the topic about children malnutrition: food supply adequacy, mortality, diseases and other physical pathologies, wealthiness of countries.
-                    The project has been created for the final examination for the Open Access and Digital Ethics course of the Master Degree in Digital Humanities and Digital Knowledge at the University of Bologna: the dataset is not actively maintained, while the datasets used for this project are currently maintained by the relative institutions or organisations. 
+                  <p>The NutriData (SE abbiamo il dataset unico finale) dataset contains datasets that derive from different sources, concerning all the factors involved in the topic about children malnutrition:
+                    food supply adequacy, mortality, diseases and other physical pathologies, wealthiness of countries.
+                    The project has been created for the final examination for the Open Access and Digital Ethics course of the Master Degree in Digital Humanities and Digital Knowledge at the University of Bologna:
+                    the dataset is not actively maintained, while the datasets used for this project are currently maintained by the relative institutions or organisations.
                     NutriData is distributed under Creative Commons Attribution 4.0 International License (CC BY-SA 4.0)</p>
+
+                  <h4>Visualisations</h4>
+                  <p>In order to achieve a wider understanding of the data, we created six different interactive visualizations:</p>
+                  <ul>
+                    <li>a <span style="color: #20c997;">colorpleth</span> world map, centered on Europe, showing the percentage of food adequacy supply during a two year time period, from 2018 to 2020.</li>
+                    <li>a  <span style="color: #20c997;">line char</span>t showing daily per capita supply of calories  from 1960 to 2013, with the possibility of focusing on the nation of interest.</li>
+                    <li>a <span style="color: #20c997;">bubble map</span> showing the distribution of the five different types of malnutrition in children and young adults around the world, from 1986 to 2019; with the possibility to choose malnutrition type and year.</li>
+                    <li>a <span style="color: #20c997;">time series barchart</span>, showing the percentage of five pathologies strictly related to malnutritions until 2019, with the possibility of focusing on the nation of interest.</li>
+                    <li>two <span style="color: #20c997;">line charts</span>: one shows the mortality rate and life expectancy from 1990 to 2019, while the other shows the gross domestic product from 1960 to 2020 with the possibility of choosing the nation of interest.</li>
+                  </ul>
+                  <p>All the graphs were realized using Amcharts 5 library for data visualization, since it is very flexible and natively integrates with Javascript.</p>
+                  <h4>RDF assertion of the metadata</h4>
+                  <h4>Conclusions</h4>
+                  <p>The NutriData project is the result of an extensive research over all the factors which revolve around children and young adults malnutrition. We performed a multi-level analysis starting from the contextual data regarding global food supplies,
+                    the next step was to focus on the data regarding the distribution of the different types of malnutrition and the related health conditions over the world, at the end we extended the research with contextual information,
+                    in order to have extra details to enrich our point of view. To highlight the different trends regarding obesity and malnutrition, we decided not to focus on a single geographical area in this way we were able to see through the visualizations the direct correlation between contextual information such as gdp and the different types of malnutrition.
+                    This project led us to believe that (heterogenous, reliable, accessible) data are fundamental to better understand a multifactorial and complex topic like this. Hopefully this project will help in raising awareness, and educating the younger generations to a more ethical approach to food and nutrition.</p>
             </div>
           </div>
         </div>
