--- a/documentation.html
+++ b/documentation.html
@@ -309,7 +309,7 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
                   <p>In order to achieve a wider understanding of the data, we created six different interactive visualizations:</p>
                   <ul>
                     <li>a <span style="color: #20c997;">colorpleth</span> world map, centered on Europe, showing the percentage of food adequacy supply during a two year time period, from 2018 to 2020.</li>
-                    <li>a  <span style="color: #20c997;">line char</span>t showing daily per capita supply of calories  from 1960 to 2013, with the possibility of focusing on the nation of interest.</li>
+                    <li>a  <span style="color: #20c997;">line chart</span> showing daily per capita supply of calories  from 1960 to 2013, with the possibility of focusing on the nation of interest.</li>
                     <li>a <span style="color: #20c997;">bubble map</span> showing the distribution of the five different types of malnutrition in children and young adults around the world, from 1986 to 2019; with the possibility to choose malnutrition type and year.</li>
                     <li>a <span style="color: #20c997;">time series barchart</span>, showing the percentage of five pathologies strictly related to malnutritions until 2019, with the possibility of focusing on the nation of interest.</li>
                     <li>two <span style="color: #20c997;">line charts</span>: one shows the mortality rate and life expectancy from 1990 to 2019, while the other shows the gross domestic product from 1960 to 2020 with the possibility of choosing the nation of interest.</li>
