--- a/documentation.html
+++ b/documentation.html
@@ -316,6 +316,7 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
                   </ul>
                   <p>All the graphs were realized using Amcharts 5 library for data visualization, since it is very flexible and natively integrates with Javascript.</p>
                   <h4>RDF assertion of the metadata</h4>
+                  <p>In order to offer better reusable and interoperable data, we provided them with their metadata, following the DCAT_AP version 2.0.0 documentation. The RDF assertion for the metadata, that follows the Turtle serialization, has been released and can be downloaded and consulted.</p>
                   <h4>Conclusions</h4>
                   <p>The NutriData project is the result of an extensive research over all the factors which revolve around children and young adults malnutrition. We performed a multi-level analysis starting from the contextual data regarding global food supplies,
                     the next step was to focus on the data regarding the distribution of the different types of malnutrition and the related health conditions over the world, at the end we extended the research with contextual information,
