--- a/documentation.html
+++ b/documentation.html
@@ -145,7 +145,7 @@
                                    </ul>
                     <h4>BIBLIOGRAPHY</h4>
                     <ul>
-                       <li>https://www.child-encyclopedia.com/child-nutrition/according-experts/feeding-behaviour-infants-and-young-children-and-its-impact-child</li>
+                       <li><a href="https://www.child-encyclopedia.com/child-nutrition/according-experts/feeding-behaviour-infants-and-young-children-and-its-impact-child" target="_blank">Feeding Behaviour of Infants and Young Children and Its Impact on Child Psychosocial and Emotional Development</a></li>
                        <li>https://www.uofmhealth.org/health-library/ug2061</li>
                        <li>https://www.healthlinkbc.ca/health-topics/ug2061 </li>
                        <li>https://www.rch.org.au/kidsinfo/fact_sheets/Nutrition_older_children/ </li>
