--- a/documentation.html
+++ b/documentation.html
@@ -146,13 +146,13 @@
                     <h4>BIBLIOGRAPHY</h4>
                     <ul>
                        <li><a href="https://www.child-encyclopedia.com/child-nutrition/according-experts/feeding-behaviour-infants-and-young-children-and-its-impact-child" target="_blank">Feeding Behaviour of Infants and Young Children and Its Impact on Child Psychosocial and Emotional Development</a></li>
-                       <li>https://www.uofmhealth.org/health-library/ug2061</li>
-                       <li>https://www.healthlinkbc.ca/health-topics/ug2061 </li>
-                       <li>https://www.rch.org.au/kidsinfo/fact_sheets/Nutrition_older_children/ </li>
-                       <li>https://www.who.int/news-room/fact-sheets/detail/malnutrition </li>
-                       <li>https://www.unicef.org.uk/press-releases/poor-diets-damaging-childrens-health-warns-unicef/ </li>
-                       <li>http://www.urbanchildinstitute.org/articles/updates/nutrition-and-early-brain-development</li>
-                       <li>https://www.child-encyclopedia.com/child-nutrition/according-experts/feeding-behaviour-infants-and-young-children-and-its-impact-child</li>
+                       <li>https://www.uofmhealth.org/health-library/ug2061 Healthy Eating in Children: Problems Caused by Poor Nutrition</li>
+                       <li>https://www.healthlinkbc.ca/health-topics/ug2061 Health Link BC </li>
+                       <li>https://www.rch.org.au/kidsinfo/fact_sheets/Nutrition_older_children/ Nutrition – school-age to adolescence</li>
+                       <li>https://www.who.int/news-room/fact-sheets/detail/malnutrition Malnutrition</li>
+                       <li>https://www.unicef.org.uk/press-releases/poor-diets-damaging-childrens-health-warns-unicef/ POOR DIETS DAMAGING CHILDREN’S HEALTH, WARNS UNICEF</li>
+                       <li>http://www.urbanchildinstitute.org/articles/updates/nutrition-and-early-brain-development Nutrition and Early Brain Development</li>
+                       <li>https://www.child-encyclopedia.com/child-nutrition/according-experts/feeding-behaviour-infants-and-young-children-and-its-impact-child Feeding Behaviour of Infants and Young Children and Its Impact on Child Psychosocial and Emotional Development</li>
                    </ul>
                    <h4>General Analysis</h4>
                       <p>To see the entire explanatory table about the general analysis click here.</p>
