--- a/documentation.html
+++ b/documentation.html
@@ -155,7 +155,7 @@
                        <li>https://www.child-encyclopedia.com/child-nutrition/according-experts/feeding-behaviour-infants-and-young-children-and-its-impact-child Feeding Behaviour of Infants and Young Children and Its Impact on Child Psychosocial and Emotional Development</li>
                    </ul>
                    <h4>General Analysis</h4>
-                      <p>To see the entire explanatory table about the general analysis click here.</p>
+                      <p>To see the entire explanatory table about the general analysis of the datasets click here.</p>
 
                     <h4>Quality analysis</h4>
                     <p>we used different datasets from different sources to fully cover the several aspects that malnutrition among children implies:</p>
