--- a/catalogue.html
+++ b/catalogue.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>OpenNutrition</title>
+  <title>NutriData</title>
 
 
   <!-- bootstrap core css -->
@@ -97,7 +97,7 @@
                     </tr>
                     <tr>
                       <td>Description</td>
-                      <td>Catalogue of OpenNutrition datasets</td>
+                      <td>Catalogue of NutriData datasets</td>
                     </tr>
                     <tr>
                       <td>Publisher</td>
@@ -241,7 +241,7 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      OpenNutrition &copy; 2021
+      NutriData &copy; 2021
       <a href=""></a>
     </p>
 
