--- a/documentation.html
+++ b/documentation.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>OpenNutrition</title>
+  <title>NutriData</title>
 
 
   <!-- bootstrap core css -->
@@ -299,7 +299,7 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
                   <p>The principles mentioned above include three types of entities: data, metadata and infrastructure. Given the analysis, we can state that our research data are almost 100% compliant with the FAIR principles, with the few exceptions due to the lack of license specification.</p>
 
                   <h4>Sustainability</h4>
-                  <p>The NutriData (SE abbiamo il dataset unico finale) dataset contains datasets that derive from different sources, concerning all the factors involved in the topic about children malnutrition:
+                  <p>The NutriData dataset contains data that derive from different sources, concerning all the factors involved in the topic about children malnutrition:
                     food supply adequacy, mortality, diseases and other physical pathologies, wealthiness of countries.
                     The project has been created for the final examination for the Open Access and Digital Ethics course of the Master Degree in Digital Humanities and Digital Knowledge at the University of Bologna:
                     the dataset is not actively maintained, while the datasets used for this project are currently maintained by the relative institutions or organisations.
@@ -397,7 +397,7 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      OpenNutrition &copy; 2021
+      NutriData &copy; 2021
       <a href=""></a>
     </p>
 
