--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>OpenNutrition</title>
+  <title>NutriData</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -322,7 +322,7 @@ nd course section -->
           Team
         </h3>
         <p>
-          The members of OpenNutrition Project.
+          The members of NutriData Project.
         </p>
       </div>
       <div class="event_container">
@@ -437,7 +437,7 @@ nd course section -->
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      OpenNutrition &copy; 2021
+      NutriData &copy; 2021
       <a href=""></a>
     </p>
 
