--- a/metadata.html
+++ b/metadata.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>OpenNutrition</title>
+  <title>NutriData</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -371,7 +371,7 @@
                 <div id="checklist" class="metadata-content card">
                   <div class="card-body text-center">
                     <h4 class="card-title">Checklist and RDF assertion of the metadata</h4>
-                    <p class="card-text">Download the checklist of the Open Nutrition dataset in .pdf format along with the RDF assertion of the metadata.</p>
+                    <p class="card-text">Download the checklist of the NutriData dataset in .pdf format along with the RDF assertion of the metadata.</p>
                     <div class="btn-group-vertical m-auto">
                     <a class="btn btn-primary m-1" href="datasets/NutriData-checklist.pdf" download>Download Check List</a>
                     <a class="btn btn-primary m-1" href="datasets/rdf_nutridata.ttl" download>Download RDF assertion of the Nutridata metadata (.ttl)</a>
@@ -461,7 +461,7 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      OpenNutrition &copy; 2021
+      NutriData &copy; 2021
       <a href=""></a>
     </p>
 
