--- a/visualizations.html
+++ b/visualizations.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>OpenNutrition</title>
+  <title>NutriData</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -234,7 +234,7 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      OpenNutrition &copy; 2021
+      NutriData &copy; 2021
       <a href=""></a>
     </p>
 
